@@ -62,7 +62,7 @@ if ($access) {
 			$query = "INSERT INTO ".cms_db_prefix()."userplugins (userplugin_id, userplugin_name, code, create_date, modified_date) VALUES ($new_usertag_id, ".$db->qstr($plugin_name).", ".$db->qstr($code).", ".$db->DBTimeStamp(time()).", ".$db->DBTimeStamp(time()).")";
 			$result = $db->Execute($query);
 			if ($result) {
-				audit($_SESSION["cms_admin_user_id"], $_SESSION["cms_admin_username"], $new_usertag_id, $plugin_name, 'Added User Tag');
+				audit($_SESSION["cms_admin_user_id"], $_SESSION["cms_admin_username"], $new_usertag_id, $plugin_name, 'Added User Defined Tag');
 				redirect("plugins.php");
 				return;
 			}
