@@ -1,6 +1,7 @@
 Version 0.6 -- Subversion
 -----------------
 
+* Added User Defined Tags (user defined php code editable in the admin)
 * Changed layout of add and edit content pages to make for less scrolling
 
 Version 0.5.1 -- Wed Aug 25 2004
